// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Get started                                                                                                        │
│                                                                                                                      │
│   How would you like to authenticate for this project?                                                               │
│                                                                                                                      │
│   (selected) Login with   (not selected) Use Gemini API (not selected) Use Zhipu API Key (智谱(not selected) Vertex  │
│   Google                  Key                           GLM)                                  AI                     │
│                                                                                                                      │
│   Something went wrong                                                                                               │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Services and Privacy Notice for isQCoder                                                                  │
│                                                                                                                      │
│   https://github.com/google-gemini/gemini-cli/blob/main/docs/tos-privacy.md                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Get started                                                                                                        │
│                                                                                                                      │
│   How would you like to authenticate for this project?                                                               │
│                                                                                                                      │
│   (selected) Login with   (not selected) Use Gemini API (not selected) Use Zhipu API Key (智谱(not selected) Vertex  │
│   Google                  Key                           GLM)                                  AI                     │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Services and Privacy Notice for isQCoder                                                                  │
│                                                                                                                      │
│   https://github.com/google-gemini/gemini-cli/blob/main/docs/tos-privacy.md                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Get started                                                                                                        │
│                                                                                                                      │
│   How would you like to authenticate for this project?                                                               │
│                                                                                                                      │
│   (selected) Use Gemini API Key                                                                                      │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Services and Privacy Notice for isQCoder                                                                  │
│                                                                                                                      │
│   https://github.com/google-gemini/gemini-cli/blob/main/docs/tos-privacy.md                                          │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
